# HSAIL-HLC-Stable

./: README.md  llvm-hsail-code-drop-may-2014.txt
hsail-tools/: Makefile  Makefile.git  asmdefs  asmlibs  asmrules  bootstrap.bat  bootstrap_w764a_dbg.bat  bootstrap_w7_dbg.bat  gen_package.pl  htdefs  htlibs  htrules  libHSAIL.sln  llvm.vcxproj  mkmk.pl
hsail-tools/HSAILAsm/: HSAILAsm.cpp  Makefile  Makefile.p4
hsail-tools/HSAILTestGen/: HSAILTestGen.cpp  HSAILTestGen.vcxproj  HSAILTestGenBackend.cpp  HSAILTestGenBackend.h  HSAILTestGenBackendEml.h  HSAILTestGenBackendLua.h  HSAILTestGenBrigContext.cpp  HSAILTestGenBrigContext.h  HSAILTestGenContext.cpp  HSAILTestGenContext.h  HSAILTestGenDataProvider.cpp  (+27 more)
llvm/: Android.mk  CMakeLists.txt  LLVMBuild.txt  Makefile.p4  Makefile.rules  llvm-device-build.mk  llvm-gen-intrinsics.mk  llvm-host-build.mk  llvm-tblgen-rules.mk  llvm.mk  llvmdefs  llvmlibs  llvmrules  shared_llvm.mk
llvm/tools/llc/: Android.mk  CMakeLists.txt  llc.cpp
tests/: add.cl  add1.cl  atomic_fetch_add.cl  atomics_0.cl  atomics_1.cl  atomics_10.cl  atomics_11.cl  atomics_12.cl  atomics_13.cl  atomics_14.cl  atomics_15.cl  atomics_16.cl  atomics_17.cl  atomics_18.cl  atomics_19.cl  atomics_2.cl  atomics_20.cl  atomics_21.cl  atomics_22.cl  atomics_23.cl  atomics_24.cl  atomics_25.cl  atomics_26.cl  atomics_27.cl  atomics_28.cl  atomics_29.cl  atomics_3.cl  atomics_30.cl  atomics_31.cl  atomics_32.cl  atomics_33.cl  atomics_34.cl  atomics_35.cl  atomics_36.cl  atomics_37.cl  atomics_38.cl  atomics_39.cl  atomics_4.cl  atomics_40.cl  atomics_41.cl  (+82 more)
(+727 files in other folders)
